includes the changes listed under ``ELinks 0.11.6.GIT now'' below.

Incompatibilities:

* Debian build bug 529821: Use ``pkg-config gnutls'' instead of
  ``libgnutls-config'', which is not included in GNUTLS 2.7.x.
  You can no longer specify the location of GNUTLS using
  ``configure --with-gnutls=DIR''.

Other changes:

* critical bug 1071: Fix crash in get_dom_node_child.
* Debian build bug 526349: Include asciidoc.py from AsciiDoc 7.1.2,
  to remove all dependencies on the installed version.
* build enhancement: Recognize ``configure --without-tre''.

ELinks 0.12pre3:
----------------

Released on 2009-03-29.  This release also included the changes listed
under ``ELinks 0.11.6'' below.

Incompatibilities:

* bug 1060: Regexp searching now requires the TRE library.
* lzma disabled by default. It's rarely used and doesn't build with new xz.

Other changes:

* critical: Fix assertion failure if IMG/@usemap refers to a different
  file.
* Preserve newlines in hidden input fields, and submit them as CRLF.
  Previously, they could turn into spaces or disappear entirely.
* Perl scripts can use modules that dynamically load C libraries, like
  XML::LibXML::SAX does.
* bug 153: Preserve Unicode characters in XBEL bookmark files.
  However, Unicode in URIs (really IRIs) does not work reliably yet;
  this is being tracked as bug 1066.
* bug 885: Convert xterm titles to ISO-8859-1 by default, but add an
  option to disable this.  When removing control characters from a
  title, note the charset.  Don't truncate titles to the width of the
  terminal.
* bug 1061: Correctly truncate UTF-8 titles in the tab bar.
* bug 1068: ELinks used to display a blank or truncated page if an
  HTTP/1.1 server sent a compressed body with incorrect Content-Length.
  That has now been fixed, and a new option (protocol.http.compression)
  has been added.
* Don't crash when the search-toggle-regex action is used and no regular
  expression support is compiled in.